Add a delay loop, along with new configuration options to control looping.
The loop allows people to just run speedLogger.py and leave it running instead
of faffing about with cron or Task Scheduler.

Set doloop to 0 in the config file if you want to use your own scheduling. The
script will run once then exit.

--- a/speedLogger.conf.example
+++ b/speedLogger.conf.example
@@ -14,3 +14,8 @@ pingtarget = server.example.org
 # Log to the console? If this is 0, silently produse the output.svg file.
 verboselogging = 1
 
+# Should the script loop? Set this to 0 if you prefer to use cron or Task Scheduler
+doloops = 1
+
+# How long should the script wait between tests (in seconds). An hour is 3600 seconds.
+loopdelayinseconds = 1800
